--- a/src/main/resources/assets/aquamirae/lang/en_us.json
+++ b/src/main/resources/assets/aquamirae/lang/en_us.json
@@ -36,41 +36,41 @@
   "class.aquamirae.sea_wolf_armor": "Sea Wolf Armor",
   "class.aquamirae.sea_wolf_weapon": "Sea Wolf Weapon",
 
-  "ability.aquamirae.abyssal_armor_full_1": "Full-Set Ability §8with Heaume>When you take fatal damage,>your death is delayed for #1s§7.>You deal 80% less damage>while the effect is active.",
-  "ability.aquamirae.abyssal_armor_full_2": "Full-Set Ability §8with Tiara>Blinds nearby hostile>creatures, reducing their>movement speed by 50%.",
-  "ability.aquamirae.abyssal_armor_half": "Half-Set Bonus>§9+25% Armor>§9+4 Armor Toughness",
-  "ability.aquamirae.dagger_of_greed_1": "Theft>Attacked Villagers and>Pillagers drop emeralds.",
-  "ability.aquamirae.dagger_of_greed_2": "Punishment>Chance to get a Bad Omen>when attacking Villagers.",
-  "ability.aquamirae.dagger_of_greed_3": "§dUnique Forging>§5Made by an Anciet Blacksmith>§5and can't be repaired.",
-  "ability.aquamirae.divider": "Cutting>Reduces the target's max>health by 5% for #1s§7.>Stacks up to 10 times.",
-  "ability.aquamirae.fin_cutter": "Revenge>For each empty heart>you have, you deal #1%>more damage (max #2%§7).",
-  "ability.aquamirae.maze_rose": "Active Ability>Summons chakras for #2s§7,>dealing #1 §7melee damage.",
-  "ability.aquamirae.poisoned_blade": "Infection>The attacked enemy>is poisoned for #1s§7.",
-  "ability.aquamirae.poisoned_chakra": "Active Ability>Summons chakras for #2s§7,>dealing #1 §7damage and>poisoning targets.",
-  "ability.aquamirae.remnants_saber": "Adaptation>Deals #1% §7more>damage while in water.",
-  "ability.aquamirae.terrible_armor_full": "Full-Set Ability>Enemies that attack you>are Poisoned for #1s§7.",
-  "ability.aquamirae.terrible_armor_half": "Half-Set Ability>Taking damage in water>increases your swimming>speed by #1% §7for #2s§7.",
-  "ability.aquamirae.terrible_sword": "Bloodthirsty Eye>You will take #1 §7damage>if the hit doesn't kill>the enemy.",
-  "ability.aquamirae.three_bolt_armor_full": "Full-Set Ability>Protects you from freezing>in the waters of the Ice Maze.",
-  "ability.aquamirae.three_bolt_armor_half": "Half-Set Ability>Works with helmet and suit>only: the suit provides>you with oxygen underwater.",
-  "ability.aquamirae.whisper_of_the_abyss": "Perforation>Reduces the target's>armor by 10% for #1s§7.>Stacks up to 5 times.",
-  "ability.aquamirae.coral_lance": "Suppression>You deal #1%§7 more damage>to Ship Graveyard creatures.",
+  "ability.aquamirae.abyssal_armor_full_1": "Full-Set Ability §8with Heaume > When you take fatal damage, your death is delayed for {#1}. You deal 80% less damage while the effect is active.",
+  "ability.aquamirae.abyssal_armor_full_2": "Full-Set Ability §8with Tiara > Blinds nearby hostile creatures, reducing their movement speed by 50%.",
+  "ability.aquamirae.abyssal_armor_half": "Half-Set Bonus > +25% Armor > +4 Armor Toughness",
+  "ability.aquamirae.dagger_of_greed_1": "Theft > Attacked Villagers and Pillagers drop emeralds.",
+  "ability.aquamirae.dagger_of_greed_2": "Punishment > Chance to get a Bad Omen when attacking Villagers.",
+  "ability.aquamirae.dagger_of_greed_3": "Unique Forging > Made by an Anciet Blacksmith and can't be repaired.",
+  "ability.aquamirae.divider": "Cutting > Reduces the target's max health by 5% for {#1}. Stacks up to 10 times.",
+  "ability.aquamirae.fin_cutter": "Revenge > For each empty heart you have, you deal {#1} more damage (max {#2}).",
+  "ability.aquamirae.maze_rose": "Active Ability > Summons chakras for {#2}, dealing {#1} melee damage.",
+  "ability.aquamirae.poisoned_blade": "Infection > The attacked enemy is poisoned for {#1}.",
+  "ability.aquamirae.poisoned_chakra": "Active Ability > Summons chakras for {#2}, dealing {#1} damage and poisoning targets.",
+  "ability.aquamirae.remnants_saber": "Adaptation > Deals {#1} more damage while in water.",
+  "ability.aquamirae.terrible_armor_full": "Full-Set Ability > Enemies that attack you are Poisoned for {#1}.",
+  "ability.aquamirae.terrible_armor_half": "Half-Set Ability > Taking damage in water increases your swimming speed by {#1} for {#2}.",
+  "ability.aquamirae.terrible_sword": "Bloodthirsty Eye > You will take {#1} damage if the hit doesn't kill the enemy.",
+  "ability.aquamirae.three_bolt_armor_full": "Full-Set Ability > Protects you from freezing in the waters of the Ice Maze.",
+  "ability.aquamirae.three_bolt_armor_half": "Half-Set Ability > Works with helmet and suit only: the suit provides you with oxygen underwater.",
+  "ability.aquamirae.whisper_of_the_abyss": "Perforation > Reduces the target's armor by 10% for {#1}. Stacks up to 5 times.",
+  "ability.aquamirae.coral_lance": "Suppression > You deal {#1} more damage to Ship Graveyard creatures.",
 
-  "lore.aquamirae.frozen_key": "Opens a chest hidden>in the depths of the>Ice Maze.",
-  "lore.aquamirae.golden_moth_in_a_jar": "Some treasures can>have their own souls,>not only devour others...",
-  "lore.aquamirae.luminescent_bubble": "Increases the swimming speed>of nearby players. Place afloat>to build underwater roads.",
+  "lore.aquamirae.frozen_key": "Opens a chest hidden in the depths of the Ice Maze.",
+  "lore.aquamirae.golden_moth_in_a_jar": "Some treasures can have their own souls, not only devour others...",
+  "lore.aquamirae.luminescent_bubble": "Increases the swimming speed of nearby players. Place afloat to build underwater roads.",
   "lore.aquamirae.luminescent_lamp": "Underwater light source.",
   "lore.aquamirae.material": "Material",
-  "lore.aquamirae.pirate_pouch": "{I}Press {U} to open.>Forgotten pirate clothes that>smell like rotten oysters...",
-  "lore.aquamirae.poseidons_breakfast": "Food of the Sea Gods.>§9Fury X (3:00)>§9Rush V (3:00)> >§5When Consumed:>§9+100% Ability Power>§9+50% Cooldown Reduction",
-  "lore.aquamirae.rune_of_the_storm": "{I}Press {U} to use.>Attaches to the sword in>your off hand, increasing its>damage in cold biomes by 33%.",
-  "lore.aquamirae.dead_sea_scroll": "{I}Press {U} to read.>§dUnknown effect",
-  "lore.aquamirae.sea_casserole": "Is it looking at me?>§9Rush II (1:30)>§9Strength (0:30)> >§5When Consumed:>§9+20% Cooldown Reduction>§9+3 Attack Damage",
-  "lore.aquamirae.sea_stew": "The power of the>sea in your stomach!>§9Fury III (2:00)>§9Strength (2:00)> >§5When Consumed:>§9+30% Ability Power>§9+3 Attack Damage",
-  "lore.aquamirae.shell_horn": "{B}§dSummons Captain Cornelia.>Can be used near water>in an Ice Maze.",
-  "lore.aquamirae.ship_graveyard_echo": "If you listen carefully, you can>hear the horns of hundreds of>ships lost in the Ice Maze...",
-  "lore.aquamirae.treasure_pouch": "{I}Press {U} to open.>Once valuable loot, now>worthless trinkets under>the ice...",
-  "lore.aquamirae.wisteria_niveis": "Even in the midst of an>icy wasteland, a wonderful>life can appear.>Can be placed.",
+  "lore.aquamirae.pirate_pouch": "{I}Press {U} to open. > Forgotten pirate clothes that smell like rotten oysters...",
+  "lore.aquamirae.poseidons_breakfast": "Food of the Sea Gods. > §9Fury X (3:00) > §9Rush V (3:00) > > §5When Consumed: > §9+100% Ability Power > §9+50% Cooldown Reduction",
+  "lore.aquamirae.rune_of_the_storm": "{I}Press {U} to use. > Attaches to the sword in your off hand, increasing its damage in cold biomes by 33%.",
+  "lore.aquamirae.dead_sea_scroll": "{I}Press {U} to read. > §dUnknown effect",
+  "lore.aquamirae.sea_casserole": "Is it looking at me? > §9Rush II (1:30) > §9Strength (0:30) > > §5When Consumed: > §9+20% Cooldown Reduction > §9+3 Attack Damage",
+  "lore.aquamirae.sea_stew": "The power of the sea in your stomach! > §9Fury III (2:00) > §9Strength (2:00) > > §5When Consumed: > §9+30% Ability Power > §9+3 Attack Damage",
+  "lore.aquamirae.shell_horn": "{B}§dSummons Captain Cornelia. > Can be used near water in an Ice Maze.",
+  "lore.aquamirae.ship_graveyard_echo": "If you listen carefully, you can hear the horns of hundreds of ships lost in the Ice Maze...",
+  "lore.aquamirae.treasure_pouch": "{I}Press {U} to open. > Once valuable loot, now worthless trinkets under the ice...",
+  "lore.aquamirae.wisteria_niveis": "Even in the midst of an icy wasteland, a wonderful life can appear. Can be placed.",
   "lore.aquamirae.oxygelium": "Can be placed.",
 
   "itemGroup.aquamirae": "Aquamirae",
@@ -217,7 +217,7 @@
   "info.maze_mother_spawn": "§c You feel the vibrations under the ice...",
 
   "perk.aquamirae.rune_of_the_storm": "@§7Rune of the Storm",
-  "perk.aquamirae.rune_of_the_storm.desc": "Rune of the Storm>Deals 33% more damage>in cold biomes.",
+  "perk.aquamirae.rune_of_the_storm.desc": "Rune of the Storm > Deals 33% more damage in cold biomes.",
 
   "subtitles.ambient.ship_horn": "",
   "subtitles.block.frozen_chest.unlock": "Frosen chest unlocked",
