--- a/src/main/resources/assets/aquamirae/lang/ko_kr.json
+++ b/src/main/resources/assets/aquamirae/lang/ko_kr.json
@@ -36,42 +36,42 @@
     "class.aquamirae.sea_wolf_armor": "바다늑대 갑옷",
     "class.aquamirae.sea_wolf_weapon": "바다늑대 무기",
     
-    "ability.aquamirae.abyssal_armor_full_1": "전체 착용 효과 §8헬름 >치명적인 데미지를 받았을 때,>죽음이 #1s§7 미뤄집니다.>효과가 지속되는 동안>데미지를 80% 적게 받습니다.",
-    "ability.aquamirae.abyssal_armor_full_2": "전체 착용 효과 §8티아라 >근처 적대적 생명체를>실명시키며, 움직이는 속도를>50% 감소시킵니다.",
-    "ability.aquamirae.abyssal_armor_half": "절반 착용 효과>§9+25% 방어도>§9+4 방어 강도",
-    "ability.aquamirae.dagger_of_greed_1": "절도>공격당한 주민 및>약탈자는 에메랄드를 떨어뜨립니다.",
-    "ability.aquamirae.dagger_of_greed_2": "징벌>주민을 공격할 때>흉조 효과를 얻을 수 있습니다.",
-    "ability.aquamirae.dagger_of_greed_3": "§d특이한 단조>§5고대의 대장장이에 의해 만들어졌습니다.>§5고칠 수 없습니다.",
-    "ability.aquamirae.divider": "절단>대상의 최대 최력이 #1s§7 동안>5% 감소합니다.>최대 10번 까지 중첩 가능.",
-    "ability.aquamirae.fin_cutter": "복수>체력의 빈 하트 당>#1% 만큼 더 많은>데미지를 입힙니다 (최대 #2%§7).",
-    "ability.aquamirae.maze_rose": "사용 효과>차크람을 #2s§7동안 소환합니다,>#1 §7근접 데미지를 입힙니다.",
-    "ability.aquamirae.poisoned_blade": "감염>공격한 적을>#1s§7동안 중독시킵니다.",
-    "ability.aquamirae.poisoned_chakra": "사용 효과>차크람을 #2s§7동안 소환합니다,>#1 §7근접 데미지를 입히고>대상을 중독시킵니다.",
-    "ability.aquamirae.remnants_saber": "적응>물에서 공격시 #1% §7>더 많은 데미지를 입힙니다.",
-    "ability.aquamirae.terrible_armor_full": "전체 착용 효과>당신을 공격하는 적은>#1s§7동안 중독됩니다.",
-    "ability.aquamirae.terrible_armor_half": "절반 착용 효과>물에서 공격을 받으면>수영 속도가 #2s§7동안>#1% 만큼 증가합니다.",
-    "ability.aquamirae.terrible_sword": "피에 굶주린 눈동자>적이 공격을 맞고 버틴다면>#1 §7데미지를 입힙니다.",
-    "ability.aquamirae.three_bolt_armor_full": "전체 착용 효과>얼음 미로의 물 속에서 어는것을>보호해줍니다.",
-    "ability.aquamirae.three_bolt_armor_half": "절반 착용 효과>오직 헬멧과 슈트로만>발동됨: 물 속에서 산소를>제공합니다.",
-    "ability.aquamirae.whisper_of_the_abyss": "구멍>목표의 방어도를>#1s§7동안 10% 줄입니다.>최대 5회 중첩",
-    "ability.aquamirae.coral_lance": "억압>배들의 무덤의 생명체들에게>#1%§7 더 많은 데미지를 입힙니다. ",
+    "ability.aquamirae.abyssal_armor_full_1": "전체 착용 효과 §8헬름 > 치명적인 데미지를 받았을 때, 죽음이 {#1} 미뤄집니다. 효과가 지속되는 동안 데미지를 80% 적게 받습니다.",
+    "ability.aquamirae.abyssal_armor_full_2": "전체 착용 효과 §8티아라 > 근처 적대적 생명체를 실명시키며, 움직이는 속도를 50% 감소시킵니다.",
+    "ability.aquamirae.abyssal_armor_half": "절반 착용 효과 > +25% 방어도 > +4 방어 강도",
+    "ability.aquamirae.dagger_of_greed_1": "절도 > 공격당한 주민 및 약탈자는 에메랄드를 떨어뜨립니다.",
+    "ability.aquamirae.dagger_of_greed_2": "징벌 > 주민을 공격할 때 흉조 효과를 얻을 수 있습니다.",
+    "ability.aquamirae.dagger_of_greed_3": "특이한 단조 > 고대의 대장장이에 의해 만들어졌습니다. 고칠 수 없습니다.",
+    "ability.aquamirae.divider": "절단 > 대상의 최대 최력이 {#1} 동안 5% 감소합니다. 최대 10번 까지 중첩 가능.",
+    "ability.aquamirae.fin_cutter": "복수 > 체력의 빈 하트 당 {#1} 만큼 더 많은 데미지를 입힙니다 (최대 {#2}).",
+    "ability.aquamirae.maze_rose": "사용 효과 > 차크람을 {#2} 동안 소환합니다, {#1} 근접 데미지를 입힙니다.",
+    "ability.aquamirae.poisoned_blade": "감염 > 공격한 적을 {#1} 동안 중독시킵니다.",
+    "ability.aquamirae.poisoned_chakra": "사용 효과 > 차크람을 {#2} 동안 소환합니다, {#1} §7근접 데미지를 입히고 대상을 중독시킵니다.",
+    "ability.aquamirae.remnants_saber": "적응 > 물에서 공격시 {#1} 더 많은 데미지를 입힙니다.",
+    "ability.aquamirae.terrible_armor_full": "전체 착용 효과 > 당신을 공격하는 적은 {#1} 동안 중독됩니다.",
+    "ability.aquamirae.terrible_armor_half": "절반 착용 효과 > 물에서 공격을 받으면 수영 속도가 {#2} 동안 {#1} 만큼 증가합니다.",
+    "ability.aquamirae.terrible_sword": "피에 굶주린 눈동자 > 적이 공격을 맞고 버틴다면 {#1} §7데미지를 입힙니다.",
+    "ability.aquamirae.three_bolt_armor_full": "전체 착용 효과 > 얼음 미로의 물 속에서 어는것을 보호해줍니다.",
+    "ability.aquamirae.three_bolt_armor_half": "절반 착용 효과 > 오직 헬멧과 슈트로만 발동됨: 물 속에서 산소를 제공합니다.",
+    "ability.aquamirae.whisper_of_the_abyss": "구멍 > 목표의 방어도를 {#1} 동안 10% 줄입니다. 최대 5회 중첩",
+    "ability.aquamirae.coral_lance": "억압 > 배들의 무덤의 생명체들에게 {#1} 더 많은 데미지를 입힙니다.",
     
-    "tooltip.lore.frozen_key": "얼음 미로>깊은 곳에 있는>숨겨진 상자를 여세요.",
-    "tooltip.lore.golden_moth_in_a_jar": "몇 보물들은>각자 영혼이 있을 수도 있습니다,>다른 소리가 들리기도 하고요..",
-    "tooltip.lore.luminescent_bubble": "근처 플레이어의>수영 속도를 증가시킵니다. 수중 도로를 만들기 위해>물 위에 띄워놓으세요.",
-    "tooltip.lore.luminescent_lamp": "수중 광원",
-    "tooltip.lore.material": "물질",
-    "tooltip.lore.pirate_pouch": "{I} {U}를 눌러 엽니다.>썩은 굴 냄새가 나는>잊혀진 해적의 헝겊입니다...",
-    "tooltip.lore.poseidons_breakfast": "바다 신의 음식.>§9Fury X (3:00)>§9Rush V (3:00)>§5섭취했을 때:>§9+100% 효과 위력>§9+50% 재사용 대기시간 감소",
-    "tooltip.lore.rune_of_the_storm": "{I} {U}를 눌러 사용합니다.>반대쪽 손에 들린 검에>추운 생물군계에서 33% 데미지가>증가하는 효과를 부여합니다.",
-    "tooltip.lore.dead_sea_scroll": "{I} {U}를 눌러 읽습니다.>§d알 수 없는 효과",
-    "tooltip.lore.sea_casserole": "날 보고 있는거야?>§9Rush II (1:30)>§9힘 (0:30)> >§5섭취했을 때:>§9+20% 재사용 대기시간 감소>§9+3 공격 데미지",
-    "tooltip.lore.sea_stew": "뱃속에서 요동치는>바다의 힘!>§9Fury III (2:00)>§9힘 (2:00)> >§5섭취했을 때:>§9+30% 효과 위력>§9+3 공격 데미지",
-    "tooltip.lore.shell_horn": "{B}§d코넬리아 선장을 소환합니다.>얼음 미로의 물 근처에서>사용할 수 있습니다.",
-    "tooltip.lore.ship_graveyard_echo": "자세히 들어보면, 얼음 미로에서>없어진 수백척의 뱃고동>소리가 들립니다...",
-    "tooltip.lore.treasure_pouch": "{I} {U}를 눌러 엽니다.>한 때는 값비싼 전리품들>이었지만, 이젠 얼음 밑의 쓸모없는>장신구들에 불과합니다...",
-    "tooltip.lore.wisteria_niveis": "찬란하기에 불안한 생명,>얼음으로 뒤덮인 황무지에 태어난,>한없이 멋있는 생명>설치할 수 있습니다.",
-    "tooltip.lore.oxygelium": "설치할 수 있습니다.",
+    "lore.aquamirae.frozen_key": "얼음 미로 깊은 곳에 있는 숨겨진 상자를 여세요.",
+    "lore.aquamirae.golden_moth_in_a_jar": "몇 보물들은 각자 영혼이 있을 수도 있습니다, 다른 소리가 들리기도 하고요..",
+    "lore.aquamirae.luminescent_bubble": "근처 플레이어의 수영 속도를 증가시킵니다. 수중 도로를 만들기 위해 물 위에 띄워놓으세요.",
+    "lore.aquamirae.luminescent_lamp": "수중 광원",
+    "lore.aquamirae.material": "물질",
+    "lore.aquamirae.pirate_pouch": "{I} {U}를 눌러 엽니다. > 썩은 굴 냄새가 나는 잊혀진 해적의 헝겊입니다...",
+    "lore.aquamirae.poseidons_breakfast": "바다 신의 음식. > §9Fury X (3:00) > §9Rush V (3:00) > > §5섭취했을 때: > §9+100% 효과 위력 > §9+50% 재사용 대기시간 감소",
+    "lore.aquamirae.rune_of_the_storm": "{I} {U}를 눌러 사용합니다. > 반대쪽 손에 들린 검에 추운 생물군계에서 33% 데미지가 증가하는 효과를 부여합니다.",
+    "lore.aquamirae.dead_sea_scroll": "{I} {U}를 눌러 읽습니다. > §d알 수 없는 효과",
+    "lore.aquamirae.sea_casserole": "날 보고 있는거야? > §9Rush II (1:30) > §9힘 (0:30) > > §5섭취했을 때: > §9+20% 재사용 대기시간 감소 > §9+3 공격 데미지",
+    "lore.aquamirae.sea_stew": "뱃속에서 요동치는 바다의 힘! > §9Fury III (2:00) > §9힘 (2:00) > > §5섭취했을 때: > §9+30% 효과 위력 > §9+3 공격 데미지",
+    "lore.aquamirae.shell_horn": "{B}§d코넬리아 선장을 소환합니다. > 얼음 미로의 물 근처에서 사용할 수 있습니다.",
+    "lore.aquamirae.ship_graveyard_echo": "자세히 들어보면, 얼음 미로에서 없어진 수백척의 뱃고동 소리가 들립니다...",
+    "lore.aquamirae.treasure_pouch": "{I} {U}를 눌러 엽니다. > 한 때는 값비싼 전리품들 이었지만, 이젠 얼음 밑의 쓸모없는 장신구들에 불과합니다...",
+    "lore.aquamirae.wisteria_niveis": "찬란하기에 불안한 생명, 얼음으로 뒤덮인 황무지에 태어난, 한없이 멋있는 생명 설치할 수 있습니다.",
+    "lore.aquamirae.oxygelium": "설치할 수 있습니다.",
     
     "itemGroup.aquamirae": "Aquamirae",
     "item.aquamirae.abyssal_amethyst": "심연의 자수정",
@@ -217,7 +217,7 @@
     "info.maze_mother_spawn": "§c 얼음 밑에서 진동이 느껴집니다...",
     
     "perk.aquamirae.rune_of_the_storm": "@§7폭풍의 룬",
-    "perk.aquamirae.rune_of_the_storm.desc": "폭풍의 룬>추운 생물군계 안에서>33%의 추가 피해량을 얻습니다.",
+    "perk.aquamirae.rune_of_the_storm.desc": "폭풍의 룬 > 추운 생물군계 안에서 33%의 추가 피해량을 얻습니다.",
     
     "subtitles.ambient.ship_horn": "",
     "subtitles.block.frozen_chest.unlock": "얼어붙은 상자가 열림",
