--- a/src/main/resources/assets/aquamirae/lang/zh_cn.json
+++ b/src/main/resources/assets/aquamirae/lang/zh_cn.json
@@ -36,42 +36,42 @@
     "class.aquamirae.sea_wolf_armor": "海狼盔甲",
     "class.aquamirae.sea_wolf_weapon": "海狼武器",
 
-    "ability.aquamirae.abyssal_armor_full_1": "全套效果 §8头盔>当你受到致命伤害时，>死亡会延迟#1s§7。>当此效果存在时，>你造成的伤害会减少80%。",
-    "ability.aquamirae.abyssal_armor_full_2": "全套效果 §8头饰>将附近的敌对生物>致盲，将它们的移速>减少50%。",
-    "ability.aquamirae.abyssal_armor_half": "半套效果>§9+25% 盔甲值>§9+4 盔甲韧性",
-    "ability.aquamirae.dagger_of_greed_1": "盗窃>攻击村民和掠>夺者会掉落绿宝石。",
-    "ability.aquamirae.dagger_of_greed_2": "惩戒>攻击村民时可能会获得>不祥之兆效果。",
-    "ability.aquamirae.dagger_of_greed_3": "§d独特锻造>§5由古老的铁匠制作>§5，并且无法修复。",
-    "ability.aquamirae.divider": "切割>减少目标5%的最大生>命值，持续#1s§7。>最多可叠加10次。",
-    "ability.aquamirae.fin_cutter": "复仇>每缺少一颗心的生命值，>你造成的伤害就增加#1%>（最大：#2%§7）。",
-    "ability.aquamirae.maze_rose": "主动能力>召唤脉轮，持续#2s§7，>造成#1§7点近战伤害。",
-    "ability.aquamirae.poisoned_blade": "感染>被攻击的敌人>会中毒#1s§7。",
-    "ability.aquamirae.poisoned_chakra": "主动能力>召唤脉轮，持续#2s§7，>造成#1§7点伤害>并令目标中毒。",
-    "ability.aquamirae.remnants_saber": "适应>在水下多造成>#1%§7点伤害。",
-    "ability.aquamirae.terrible_armor_full": "全套效果>攻击你的敌>人会中毒#1s§7。",
-    "ability.aquamirae.terrible_armor_half": "半套效果>在水下受到伤害>会增加你游速#1%§7，持续#2s§7。",
-    "ability.aquamirae.terrible_sword": "嗜血之眼>如果你的攻击>没有杀死敌人，>你会受到#1§7点伤害。",
-    "ability.aquamirae.three_bolt_armor_full": "全套效果>让你不会在寒冰>迷宫的水中冻结。",
-    "ability.aquamirae.three_bolt_armor_half": "半套效果>唯头盔和胸甲有效：>水下提供氧气。",
-    "ability.aquamirae.whisper_of_the_abyss": "穿孔>减少目标10%的盔>甲值，持续#1s§7。>最多可叠加5次。",
-    "ability.aquamirae.coral_lance": "抑制>你对海船墓地里>的生物造成的伤>害多#1%§7。",
+    "ability.aquamirae.abyssal_armor_full_1": "全套效果 §8头盔 > 当你受到致命伤害时，死亡会延迟{#1}。 > 当此效果存在时，你造成的伤害会减少80%。",
+    "ability.aquamirae.abyssal_armor_full_2": "全套效果 §8头饰 > 将附近的敌对生物致盲， > 将它们的移速减少50%。",
+    "ability.aquamirae.abyssal_armor_half": "半套效果 > +25% 盔甲值 > +4 盔甲韧性",
+    "ability.aquamirae.dagger_of_greed_1": "盗窃 > 攻击村民和掠夺者会掉落绿宝石。",
+    "ability.aquamirae.dagger_of_greed_2": "惩戒 > 攻击村民时可能会获得不祥之兆效果。",
+    "ability.aquamirae.dagger_of_greed_3": "独特锻造 > 由古老的铁匠制作， > 并且无法修复。",
+    "ability.aquamirae.divider": "切割 > 减少目标5%的最大生命值， > 持续{#1}。最多可叠加10次。",
+    "ability.aquamirae.fin_cutter": "复仇 > 每缺少一颗心的生命值， > 你造成的伤害就增加{#1} > （最大：{#2}）。",
+    "ability.aquamirae.maze_rose": "主动能力 > 召唤脉轮，持续{#2}， > 造成#1§7点近战伤害。",
+    "ability.aquamirae.poisoned_blade": "感染 > 被攻击的敌人会中毒{#1}。",
+    "ability.aquamirae.poisoned_chakra": "主动能力 > 召唤脉轮，持续{#2}， > 造成{#1}点伤害并令目标中毒。",
+    "ability.aquamirae.remnants_saber": "适应 > 在水下多造成{#1}点伤害。",
+    "ability.aquamirae.terrible_armor_full": "全套效果 > 攻击你的敌人会中毒{#1}。",
+    "ability.aquamirae.terrible_armor_half": "半套效果 > 在水下受到伤害会增加你游速{#1}， > 持续{#2}。",
+    "ability.aquamirae.terrible_sword": "嗜血之眼 > 如果你的攻击没有杀死敌人， > 你会受到{#1}点伤害。",
+    "ability.aquamirae.three_bolt_armor_full": "全套效果 > 让你不会在寒冰迷宫的水中冻结。",
+    "ability.aquamirae.three_bolt_armor_half": "半套效果 > 唯头盔和胸甲有效： > 水下提供氧气。",
+    "ability.aquamirae.whisper_of_the_abyss": "穿孔 > 减少目标10%的盔甲值， > 持续{#1}。最多可叠加5次。",
+    "ability.aquamirae.coral_lance": "抑制 > 你对海船墓地里的生物造成的伤害多{#1}。",
 
-    "tooltip.lore.frozen_key": "打开在寒冰>迷宫的深处>隐藏的宝箱。",
-    "tooltip.lore.golden_moth_in_a_jar": "有些生物可>以拥有自己>的灵魂，而不是>靠吞噬其他的……",
-    "tooltip.lore.luminescent_bubble": "提供附近玩>家的游速。可以>漂浮起来作为>水下的道路使用。",
-    "tooltip.lore.luminescent_lamp": "水下光源。",
-    "tooltip.lore.material": "材料",
-    "tooltip.lore.pirate_pouch": "{I}按下{U}以开启。>这被遗忘的海盗衣物，>闻起来就像是烂掉的牡蛎……",
-    "tooltip.lore.poseidons_breakfast": "海神的食物。>§9狂怒 X（3:00）>§9冲刺 V（3:00）> >§5食用时：>§9+100% 能力强度>§9+50% 冷却减少",
-    "tooltip.lore.rune_of_the_storm": "{I}按下{U}以使用。>附在你副手的剑上，>增加33%在寒冷生物群>系中的伤害。",
-    "tooltip.lore.dead_sea_scroll": "{I}按下{U}以阅读。>§d未知效果",
-    "tooltip.lore.sea_casserole": "它在看着我吗？>§9冲刺 II（1:30）>§9力量（0:30）> >§5食用时：>§9+20% 冷却减少>§9+3 攻击伤害",
-    "tooltip.lore.sea_stew": "海洋的力量>就在你胃中！>§9狂怒 III（2:00）>§9力量（2:00）> >§5食用时：>§9+30% 能力强度>§9+3 攻击伤害",
-    "tooltip.lore.shell_horn": "{B}§d召唤船长科妮莉亚。>可以在寒冰迷宫>的水边使用。",
-    "tooltip.lore.ship_graveyard_echo": "如果你仔细倾听，你可以>听到数百艘船在寒冰>迷宫中越来越淡的喇叭声……",
-    "tooltip.lore.treasure_pouch": "{I}按下{U}以开启。>曾经珍贵的战利品，>现在是冰下毫无价值的小装饰……",
-    "tooltip.lore.wisteria_niveis": "即使是在冰冷的荒原中>，其生命也熠熠生辉>。可以被放置。",
-    "tooltip.lore.oxygelium": "可以被放置",
+    "lore.aquamirae.frozen_key": "打开在寒冰迷宫的深处隐藏的宝箱。",
+    "lore.aquamirae.golden_moth_in_a_jar": "有些生物可以拥有自己的灵魂， > 而不是靠吞噬其他的……",
+    "lore.aquamirae.luminescent_bubble": "提供附近玩家的游速。 > 可以漂浮起来作为水下的道路使用。",
+    "lore.aquamirae.luminescent_lamp": "水下光源。",
+    "lore.aquamirae.material": "材料",
+    "lore.aquamirae.pirate_pouch": "{I}按下{U}以开启。 > 这被遗忘的海盗衣物， > 闻起来就像是烂掉的牡蛎……",
+    "lore.aquamirae.poseidons_breakfast": "海神的食物。 > §9狂怒 X（3:00） > §9冲刺 V（3:00） > > §5食用时： > §9+100% 能力强度 > §9+50% 冷却减少",
+    "lore.aquamirae.rune_of_the_storm": "{I}按下{U}以使用。 > 附在你副手的剑上， > 增加33%在寒冷生物群系中的伤害。",
+    "lore.aquamirae.dead_sea_scroll": "{I}按下{U}以阅读。 > §d未知效果",
+    "lore.aquamirae.sea_casserole": "它在看着我吗？ > §9冲刺 II（1:30） > §9力量（0:30） > > §5食用时： > §9+20% 冷却减少 > §9+3 攻击伤害",
+    "lore.aquamirae.sea_stew": "海洋的力量 > 就在你胃中！ > §9狂怒 III（2:00） > §9力量（2:00） > > §5食用时： > §9+30% 能力强度 > §9+3 攻击伤害",
+    "lore.aquamirae.shell_horn": "{B}§d召唤船长科妮莉亚。 > 可以在寒冰迷宫的水边使用。",
+    "lore.aquamirae.ship_graveyard_echo": "如果你仔细倾听，你可以听到数百艘 > 船在寒冰迷宫中越来越淡的喇叭声……",
+    "lore.aquamirae.treasure_pouch": "{I}按下{U}以开启。 > 曾经珍贵的战利品， > 现在是冰下毫无价值的小装饰……",
+    "lore.aquamirae.wisteria_niveis": "即使是在冰冷的荒原中， > 其生命也熠熠生辉。可以被放置。",
+    "lore.aquamirae.oxygelium": "可以被放置",
 
     "itemGroup.aquamirae": "海灵物语",
     "item.aquamirae.abyssal_amethyst": "深海紫水晶",
@@ -94,7 +94,7 @@
     "item.aquamirae.fin_cutter": "罗非鱼",
     "item.aquamirae.frozen_key": "冰冻钥匙",
     "item.aquamirae.golden_moth_spawn_egg": "金蛾刷怪蛋",
-    "item.aquamirae.luminescent_bubble": "发光气泡",
+    "item.aquamirae.luminescent_bubble": "冷光气泡",
     "item.aquamirae.maw_spawn_egg": "深渊巨口刷怪蛋",
     "item.aquamirae.maze_mother_spawn_egg": "迷宫之母刷怪蛋",
     "item.aquamirae.maze_rose": "迷宫玫瑰",
@@ -166,8 +166,8 @@
     "block.aquamirae.elodea": "伊乐藻",
     "block.aquamirae.frozen_chest": "冰冻箱子",
     "block.aquamirae.golden_moth_in_a_jar": "金蛾罐子",
-    "block.aquamirae.luminescent_bubble": "发光气泡",
-    "block.aquamirae.luminescent_lamp": "发光灯",
+    "block.aquamirae.luminescent_bubble": "冷光气泡",
+    "block.aquamirae.luminescent_lamp": "冷光灯",
     "block.aquamirae.oxygelium": "氧化凝胶",
     "block.aquamirae.painting_anglerfish": "画",
     "block.aquamirae.painting_anglerfish_desc": "鮟鱇鱼，作者：Obscuria",
@@ -217,7 +217,7 @@
     "info.maze_mother_spawn": "§c 你感受到冰下的震动……",
 
     "perk.aquamirae.rune_of_the_storm": "@§7风暴符文",
-    "perk.aquamirae.rune_of_the_storm.desc": "风暴符文让你>在寒冷的生物群系中>多造成33%的伤害。",
+    "perk.aquamirae.rune_of_the_storm.desc": "风暴符文 > 在寒冷的生物群系中多造成33%的伤害。",
 
     "subtitles.ambient.ship_horn": "",
     "subtitles.block.frozen_chest.unlock": "冰冻箱子：解锁",
