--- a/src/main/resources/assets/aquamirae/lang/zh_tw.json
+++ b/src/main/resources/assets/aquamirae/lang/zh_tw.json
@@ -36,42 +36,42 @@
   "class.aquamirae.sea_wolf_armor": "海狼盔甲",
   "class.aquamirae.sea_wolf_weapon": "海狼武器",
 
-  "ability.aquamirae.abyssal_armor_full_1": "全套能力 §8戴上頭盔時:>當你受到致命傷害時>你的死亡時間將被延後>#1s§7。而效果發動期間>你造成的傷害減少 80%",
-  "ability.aquamirae.abyssal_armor_full_2": "全套能力 §8戴上皇冠時:>使附近的敵對生物 >致盲，並降低他們 >50% 的移動速度。",
-  "ability.aquamirae.abyssal_armor_half": "半套能力>§9+25% 盔甲>§9+4 盔甲強度",
-  "ability.aquamirae.dagger_of_greed_1": "盜竊>攻擊村民和掠奪者>時會掉落綠寶石。",
-  "ability.aquamirae.dagger_of_greed_2": "懲罰>攻擊村民時有機>率獲得不祥之兆。",
-  "ability.aquamirae.dagger_of_greed_3": "§d獨一無二的作品>§5由一位古老的鐵匠>§5製造，而且無法修復",
-  "ability.aquamirae.divider": "切割>將目標的最大生命值降低 5%，>持續 #1s§7。最多疊加 10 次。",
-  "ability.aquamirae.fin_cutter": "復仇>當你的生命槽每缺少一顆心，>你所造成的傷害增加 #1%>（最多 #2%§7）。",
-  "ability.aquamirae.maze_rose": "主動能力>召喚脈輪，持續 #2s§7>造成 #1 §7點的近戰傷害。",
-  "ability.aquamirae.poisoned_blade": "感染>受到攻擊的敵人將中毒 #1s§7。",
-  "ability.aquamirae.poisoned_chakra": "主動能力>召喚脈輪，持續 #2s§7>造成 #1 §7點的近戰傷害>並使目標中毒。",
-  "ability.aquamirae.remnants_saber": "適應>在水中造成 #1% §7以上的傷害。",
-  "ability.aquamirae.terrible_armor_full": "全套能力>攻擊你的敵人中毒 #1s§7。",
-  "ability.aquamirae.terrible_armor_half": "半套能力>你在水中受到傷害>時增加你的游泳>速度 #1% §7持續 #2s§7。",
-  "ability.aquamirae.terrible_sword": "嗜血之眼>如果你的攻擊>沒有殺死敵人>你將會受到 #1 §7點傷害。",
-  "ability.aquamirae.three_bolt_armor_full": "全套能力>保護你在冰迷宮的>水域中免受冰凍。",
-  "ability.aquamirae.three_bolt_armor_half": "半套獎勵>僅適用於頭盔和胸甲：>為你提供氧氣。",
-  "ability.aquamirae.whisper_of_the_abyss": "穿孔>將目標的護甲降低 10%，>持續 #1s§7。最多疊加 5 次。",
-  "ability.aquamirae.coral_lance": "壓制>你船隻墳場裡的生物>造成 #1% §7以上的傷害。",
+  "ability.aquamirae.abyssal_armor_full_1": "全套能力 §8戴上頭盔時: > 當你受到致命傷害時你的死亡時間將被延後{#1}。 > 而效果發動期間你造成的傷害減少 80%",
+  "ability.aquamirae.abyssal_armor_full_2": "全套能力 §8戴上皇冠時: > 使附近的敵對生物致盲， > 並降低他們 50% 的移動速度。",
+  "ability.aquamirae.abyssal_armor_half": "半套能力 > +25% 盔甲 > +4 盔甲強度",
+  "ability.aquamirae.dagger_of_greed_1": "盜竊 > 攻擊村民和掠奪者時會掉落綠寶石。",
+  "ability.aquamirae.dagger_of_greed_2": "懲罰 > 攻擊村民時有機率獲得不祥之兆。",
+  "ability.aquamirae.dagger_of_greed_3": "獨一無二的作品 > 由一位古老的鐵匠製造， > 而且無法修復",
+  "ability.aquamirae.divider": "切割 > 將目標的最大生命值降低 5%， > 持續 {#1}。最多疊加 10 次。",
+  "ability.aquamirae.fin_cutter": "復仇 > 當你的生命槽每缺少一顆心， > 你所造成的傷害增加 {#1} （最多 {#2}）。",
+  "ability.aquamirae.maze_rose": "主動能力 > 召喚脈輪，持續 {#2} 造成 {#1} 點的近戰傷害。",
+  "ability.aquamirae.poisoned_blade": "感染 > 受到攻擊的敵人將中毒 {#1}。",
+  "ability.aquamirae.poisoned_chakra": "主動能力 > 召喚脈輪，持續 {#2} 造成 >  {#1} 點的近戰傷害並使目標中毒。",
+  "ability.aquamirae.remnants_saber": "適應 > 在水中造成 {#1} 以上的傷害。",
+  "ability.aquamirae.terrible_armor_full": "全套能力 > 攻擊你的敵人中毒 {#1}。",
+  "ability.aquamirae.terrible_armor_half": "半套能力 > 你在水中受到傷害時增加你的游泳速度 > {#1} 持續 {#2}。",
+  "ability.aquamirae.terrible_sword": "嗜血之眼 > 如果你的攻擊沒有殺死敵人你將會受到 > {#1} §點傷害。",
+  "ability.aquamirae.three_bolt_armor_full": "全套能力 > 保護你在冰迷宮的水域中免受冰凍。",
+  "ability.aquamirae.three_bolt_armor_half": "半套獎勵 > 僅適用於頭盔和胸甲： > 為你提供氧氣。",
+  "ability.aquamirae.whisper_of_the_abyss": "穿孔 > 將目標的護甲降低 10%， > 持續 {#1}。最多疊加 5 次。",
+  "ability.aquamirae.coral_lance": "壓制 > 你船隻墳場裡的生物造成 {#1} 以上的傷害。",
 
-  "tooltip.lore.frozen_key": "打開隱藏在>冰迷宮深處的箱子。",
-  "tooltip.lore.golden_moth_in_a_jar": "一些寶物可以>擁有自己的靈魂，>而不是只吞噬其他的……",
-  "tooltip.lore.luminescent_bubble": "提高附近>玩家的游泳速度。>漂浮在水下建造道路。",
-  "tooltip.lore.luminescent_lamp": "水下光源。",
-  "tooltip.lore.material": "材料",
-  "tooltip.lore.pirate_pouch": "{I}按 {U} 打開。>被遺忘的海盜衣服，>聞起來像腐爛的牡蠣……",
-  "tooltip.lore.poseidons_breakfast": "海神的食物。>§9狂怒 X (3:00)>§9衝刺 V (3:00)> >§5消耗時：>§9+100% 法術強度>§9 +50% 冷卻縮減",
-  "tooltip.lore.rune_of_the_storm": "{I}按 {U} 使用。>附加到你副手的劍上，增加其>在寒冷生物群落中的傷害 33%。",
-  "tooltip.lore.dead_sea_scroll": "{I}按{U}閱讀。>§d未知效果",
-  "tooltip.lore.sea_casserole": "它在看著我嗎？>§9Rush II (1:30)>§9力量 (0:30)> >§5消耗時：>§9+20% 冷卻縮減>§9+ 3 攻擊力",
-  "tooltip.lore.sea_stew": "大海的力量>在你的胃裡！>§9憤怒 III (2:00)>§9力量 (2:00)> >§5消耗時：>§9+30% 法術強度>§9+3 攻擊力",
-  "tooltip.lore.shell_horn": " {B}§d召喚柯妮莉雅船長。>可以在冰迷宮的水邊使用。",
-  "tooltip.lore.ship_graveyard_echo": "如果你仔細寧聽，你>可以聽到迷失在冰迷宮>中數百艘船的號角聲……",
-  "tooltip.lore.treasure_pouch": "{I}按 {U} 打開。>曾經有價值的戰利品，>現在在冰下的毫無價值……",
-  "tooltip.lore.wisteria_niveis": "即使在冰冷的>荒原之中，也能 >活出精彩的人生。>可以放置。",
-  "tooltip.lore.oxygelium": "可以放置。",
+  "lore.aquamirae.frozen_key": "打開隱藏在冰迷宮深處的箱子。",
+  "lore.aquamirae.golden_moth_in_a_jar": "一些寶物可以擁有自己的靈魂， > 而不是只吞噬其他的……",
+  "lore.aquamirae.luminescent_bubble": "提高附近玩家的游泳速度。 > 漂浮在水下建造道路。",
+  "lore.aquamirae.luminescent_lamp": "水下光源。",
+  "lore.aquamirae.material": "材料",
+  "lore.aquamirae.pirate_pouch": "{I}按 {U} 打開。 > 被遺忘的海盜衣服， > 聞起來像腐爛的牡蠣……",
+  "lore.aquamirae.poseidons_breakfast": "海神的食物。 > §9狂怒 X (3:00) > §9衝刺 V (3:00) > > §5消耗時： > §9+100% 法術強度 > §9+50% 冷卻縮減",
+  "lore.aquamirae.rune_of_the_storm": "{I}按 {U} 使用。 > 附加到你副手的劍上， > 增加其在寒冷生物群落中的傷害 33%。",
+  "lore.aquamirae.dead_sea_scroll": "{I}按{U}閱讀。 > §d未知效果",
+  "lore.aquamirae.sea_casserole": "它在看著我嗎？ > §9Rush II (1:30) > §9力量 (0:30) > > §5消耗時： > §9+20% 冷卻縮減 > §9+3 攻擊力",
+  "lore.aquamirae.sea_stew": "大海的力量在你的胃裡！ > §9憤怒 III (2:00) > §9力量 (2:00) > > §5消耗時： > §9+30% 法術強度 > §9+3 攻擊力",
+  "lore.aquamirae.shell_horn": " {B}§d召喚柯妮莉雅船長。 > 可以在冰迷宮的水邊使用。",
+  "lore.aquamirae.ship_graveyard_echo": "如果你仔細寧聽， > 你可以聽到迷失在冰迷宮中數百艘船的號角聲……",
+  "lore.aquamirae.treasure_pouch": "{I}按 {U} 打開。 > 曾經有價值的戰利品， > 現在在冰下的毫無價值……",
+  "lore.aquamirae.wisteria_niveis": "即使在冰冷的荒原之中， > 也能活出精彩的人生。可以放置。",
+  "lore.aquamirae.oxygelium": "可以放置。",
 
   "itemGroup.aquamirae": "Aquamirae",
   "item.aquamirae.abyssal_amethyst": "深淵紫水晶",
@@ -217,7 +217,7 @@
   "info.maze_mother_spawn": "§c 你感覺到冰下的震動......",
 
   "perk.aquamirae.rune_of_the_storm": "@§7風暴符文",
-  "perk.aquamirae.rune_of_the_storm.desc": "風暴符文>在寒冷的生物群落中>造成33%以上的傷害。",
+  "perk.aquamirae.rune_of_the_storm.desc": "風暴符文 > 在寒冷的生物群落中造成33%以上的傷害。",
 
   "subtitles.ambient.ship_horn": "",
   "subtitles.block.frozen_chest.unlock": "冰凍寶箱已解鎖",
