--- a/src/main/resources/assets/aquamirae/lang/en_us.json
+++ b/src/main/resources/assets/aquamirae/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+  "language.aquamirae.translation_author": "",
+
   "advancements.aquamirae.root.descr": "Ship Graveyard",
   "advancements.aquamirae.root.title": "Aquamirae",
   "advancements.aquamirae.find_ice_maze.descr": "Find the Ice Maze location in the Frozen Ocean biome.",
@@ -30,49 +32,46 @@
   "advancements.aquamirae.catch_golden_moth.descr": "Catch a shining moth in a bottle",
   "advancements.aquamirae.catch_golden_moth.title": "Shine!",
 
-  "obscure_book.aquamirae.description": " Adventure mod that adds a> Ship Graveyard with terrible> deep sea creatures.> The exploration of this mod> starts by finding an Ice Maze> located in the Deep Frozen> Ocean biome.",
-
   "class.aquamirae.sea_wolf": "Sea Wolf",
   "class.aquamirae.sea_wolf_armor": "Sea Wolf Armor",
   "class.aquamirae.sea_wolf_weapon": "Sea Wolf Weapon",
 
-  "ability.abyssal_armor_full_1": "Full-Set Ability §8with Heaume>When you take fatal damage,>your death is delayed for #1s§7.>You deal 80% less damage>while the effect is active.",
-  "ability.abyssal_armor_full_2": "Full-Set Ability §8with Tiara>Blinds nearby hostile>creatures, reducing their>movement speed by 50%.",
-  "ability.abyssal_armor_half": "Half-Set Bonus>§9+25% Armor>§9+4 Armor Toughness",
-  "ability.cost.none": "",
-  "ability.dagger_of_greed_1": "Theft>Attacked Villagers and>Pillagers drop emeralds.",
-  "ability.dagger_of_greed_2": "Punishment>Chance to get a Bad Omen>when attacking Villagers.",
-  "ability.dagger_of_greed_3": "§dUnique Forging>§5Made by an Anciet Blacksmith>§5and can't be repaired.",
-  "ability.divider": "Cutting>Reduces the target's max>health by 5% for #1s§7.>Stacks up to 10 times.",
-  "ability.fin_cutter": "Revenge>For each empty heart>you have, you deal #1%>more damage (max #2%§7).",
-  "ability.maze_rose": "Active Ability>Summons chakras for #2s§7,>dealing #1 §7melee damage.",
-  "ability.poisoned_blade": "Infection>The attacked enemy>is poisoned for #1s§7.",
-  "ability.poisoned_chakra": "Active Ability>Summons chakras for #2s§7,>dealing #1 §7damage and>poisoning targets.",
-  "ability.remnants_saber": "Adaptation>Deals #1% §7more>damage while in water.",
-  "ability.terrible_armor_full": "Full-Set Ability>Enemies that attack you>are Poisoned for #1s§7.",
-  "ability.terrible_armor_half": "Half-Set Ability>Taking damage in water>increases your swimming>speed by #1% §7for #2s§7.",
-  "ability.terrible_sword": "Bloodthirsty Eye>You will take #1 §7damage>if the hit doesn't kill>the enemy.",
-  "ability.three_bolt_armor_full": "Full-Set Ability>Protects you from freezing>in the waters of the Ice Maze.",
-  "ability.three_bolt_armor_half": "Half-Set Ability>Works with helmet and suit>only: the suit provides>you with oxygen underwater.",
-  "ability.whisper_of_the_abyss": "Perforation>Reduces the target's>armor by 10% for #1s§7.>Stacks up to 5 times.",
-  "ability.coral_lance": "Suppression>You deal #1%§7 more damage>to Ship Graveyard creatures.",
+  "ability.aquamirae.abyssal_armor_full_1": "Full-Set Ability §8with Heaume > When you take fatal damage, your death is delayed for {#1}. You deal 80% less damage while the effect is active.",
+  "ability.aquamirae.abyssal_armor_full_2": "Full-Set Ability §8with Tiara > Blinds nearby hostile creatures, reducing their movement speed by 50%.",
+  "ability.aquamirae.abyssal_armor_half": "Half-Set Bonus > +25% Armor > +4 Armor Toughness",
+  "ability.aquamirae.dagger_of_greed_1": "Theft > Attacked Villagers and Pillagers drop emeralds.",
+  "ability.aquamirae.dagger_of_greed_2": "Punishment > Chance to get a Bad Omen when attacking Villagers.",
+  "ability.aquamirae.dagger_of_greed_3": "Unique Forging > Made by an Anciet Blacksmith and can't be repaired.",
+  "ability.aquamirae.divider": "Cutting > Reduces the target's max health by 5% for {#1}. Stacks up to 10 times.",
+  "ability.aquamirae.fin_cutter": "Revenge > For each empty heart you have, you deal {#1} more damage (max {#2}).",
+  "ability.aquamirae.maze_rose": "Active Ability > Summons chakras for {#2}, dealing {#1} melee damage.",
+  "ability.aquamirae.poisoned_blade": "Infection > The attacked enemy is poisoned for {#1}.",
+  "ability.aquamirae.poisoned_chakra": "Active Ability > Summons chakras for {#2}, dealing {#1} damage and poisoning targets.",
+  "ability.aquamirae.remnants_saber": "Adaptation > Deals {#1} more damage while in water.",
+  "ability.aquamirae.terrible_armor_full": "Full-Set Ability > Enemies that attack you are Poisoned for {#1}.",
+  "ability.aquamirae.terrible_armor_half": "Half-Set Ability > Taking damage in water increases your swimming speed by {#1} for {#2}.",
+  "ability.aquamirae.terrible_sword": "Bloodthirsty Eye > You will take {#1} damage if the hit doesn't kill the enemy.",
+  "ability.aquamirae.three_bolt_armor_full": "Full-Set Ability > Protects you from freezing in the waters of the Ice Maze.",
+  "ability.aquamirae.three_bolt_armor_half": "Half-Set Ability > Works with helmet and suit only: the suit provides you with oxygen underwater.",
+  "ability.aquamirae.whisper_of_the_abyss": "Perforation > Reduces the target's armor by 10% for {#1}. Stacks up to 5 times.",
+  "ability.aquamirae.coral_lance": "Suppression > You deal {#1} more damage to Ship Graveyard creatures.",
 
-  "tooltip.lore.frozen_key": "Opens a chest hidden>in the depths of the>Ice Maze.",
-  "tooltip.lore.golden_moth_in_a_jar": "Some treasures can>have their own souls,>not only devour others...",
-  "tooltip.lore.luminescent_bubble": "Increases the swimming speed>of nearby players. Place afloat>to build underwater roads.",
-  "tooltip.lore.luminescent_lamp": "Underwater light source.",
-  "tooltip.lore.material": "Material",
-  "tooltip.lore.pirate_pouch": "[i]Press [u] to open.>Forgotten pirate clothes that>smell like rotten oysters...",
-  "tooltip.lore.poseidons_breakfast": "Food of the Sea Gods.>§9Fury X (3:00)>§9Rush V (3:00)> >§5When Consumed:>§9+100% Ability Power>§9+50% Cooldown Reduction",
-  "tooltip.lore.rune_of_the_storm": "[i]Press [u] to use.>Attaches to the sword in>your off hand, increasing its>damage in cold biomes by 33%.",
-  "tooltip.lore.dead_sea_scroll": "[i]Press [u] to read.>§dUnknown effect",
-  "tooltip.lore.sea_casserole": "Is it looking at me?>§9Rush II (1:30)>§9Strength (0:30)> >§5When Consumed:>§9+20% Cooldown Reduction>§9+3 Attack Damage",
-  "tooltip.lore.sea_stew": "The power of the>sea in your stomach!>§9Fury III (2:00)>§9Strength (2:00)> >§5When Consumed:>§9+30% Ability Power>§9+3 Attack Damage",
-  "tooltip.lore.shell_horn": "[b]§dSummons Captain Cornelia.>Can be used near water>in an Ice Maze.",
-  "tooltip.lore.ship_graveyard_echo": "If you listen carefully, you can>hear the horns of hundreds of>ships lost in the Ice Maze...",
-  "tooltip.lore.treasure_pouch": "[i]Press [u] to open.>Once valuable loot, now>worthless trinkets under>the ice...",
-  "tooltip.lore.wisteria_niveis": "Even in the midst of an>icy wasteland, a wonderful>life can appear.>Can be placed.",
-  "tooltip.lore.oxygelium": "Can be placed.",
+  "lore.aquamirae.frozen_key": "Opens a chest hidden in the depths of the Ice Maze.",
+  "lore.aquamirae.golden_moth_in_a_jar": "Some treasures can have their own souls, not only devour others...",
+  "lore.aquamirae.luminescent_bubble": "Increases the swimming speed of nearby players. Place afloat to build underwater roads.",
+  "lore.aquamirae.luminescent_lamp": "Underwater light source.",
+  "lore.aquamirae.material": "Material",
+  "lore.aquamirae.pirate_pouch": "{I}Press {U} to open. > Forgotten pirate clothes that smell like rotten oysters...",
+  "lore.aquamirae.poseidons_breakfast": "Food of the Sea Gods. > §9Fury X (3:00) > §9Rush V (3:00) > > §5When Consumed: > §9+100% Ability Power > §9+50% Cooldown Reduction",
+  "lore.aquamirae.rune_of_the_storm": "{I}Press {U} to use. > Attaches to the sword in your off hand, increasing its damage in cold biomes by 33%.",
+  "lore.aquamirae.dead_sea_scroll": "{I}Press {U} to read. > §dUnknown effect",
+  "lore.aquamirae.sea_casserole": "Is it looking at me? > §9Rush II (1:30) > §9Strength (0:30) > > §5When Consumed: > §9+20% Cooldown Reduction > §9+3 Attack Damage",
+  "lore.aquamirae.sea_stew": "The power of the sea in your stomach! > §9Fury III (2:00) > §9Strength (2:00) > > §5When Consumed: > §9+30% Ability Power > §9+3 Attack Damage",
+  "lore.aquamirae.shell_horn": "{B}§dSummons Captain Cornelia. > Can be used near water in an Ice Maze.",
+  "lore.aquamirae.ship_graveyard_echo": "If you listen carefully, you can hear the horns of hundreds of ships lost in the Ice Maze...",
+  "lore.aquamirae.treasure_pouch": "{I}Press {U} to open. > Once valuable loot, now worthless trinkets under the ice...",
+  "lore.aquamirae.wisteria_niveis": "Even in the midst of an icy wasteland, a wonderful life can appear. Can be placed.",
+  "lore.aquamirae.oxygelium": "Can be placed.",
 
   "itemGroup.aquamirae": "Aquamirae",
   "item.aquamirae.abyssal_amethyst": "Abyssal Amethyst",
@@ -169,10 +168,7 @@
   "block.aquamirae.golden_moth_in_a_jar": "Golden Moth in a Jar",
   "block.aquamirae.luminescent_bubble": "Luminescent Bubble",
   "block.aquamirae.luminescent_lamp": "Luminescent Lamp",
-  "block.aquamirae.oxygelium_bud": "Oxygelium Bud",
-  "block.aquamirae.oxygelium_bud_empty": "Empty Oxygelium Bud",
-  "block.aquamirae.oxygelium_bud_rare": "Oxygelium Bud (Rare)",
-  "block.aquamirae.oxygelium_stem": "Oxygelium Stem",
+  "block.aquamirae.oxygelium": "Oxygelium",
   "block.aquamirae.painting_anglerfish": "Collectible Painting",
   "block.aquamirae.painting_anglerfish_desc": "Anglerfish by Obscuria",
   "block.aquamirae.painting_aurora": "Collectible Painting",
@@ -197,16 +193,22 @@
 
   "effect.aquamirae.abyss_blindness": "Blindness",
   "effect.aquamirae.abyss_blindness.description": "Blinding Abyss armor effect. Decreases movement speed.",
+  "effect.aquamirae.abyss_blindness.desc": "Blinding Abyss armor effect. Decreases movement speed.",
   "effect.aquamirae.armor_decrease": "§cPerforation",
   "effect.aquamirae.armor_decrease.description": "Whisper of the Abyss effect. Reduces armor value.",
+  "effect.aquamirae.armor_decrease.desc": "Whisper of the Abyss effect. Reduces armor value.",
   "effect.aquamirae.crystallization": "§cCrystallization",
   "effect.aquamirae.crystallization.description": "Blinding Abyss armor effect. You deal 80% less damage and die when the effect ends.",
+  "effect.aquamirae.crystallization.desc": "Blinding Abyss armor effect. You deal 80% less damage and die when the effect ends.",
   "effect.aquamirae.health_decrease": "§cDivide",
   "effect.aquamirae.health_decrease.description": "Divider effect. Reduces max health.",
+  "effect.aquamirae.health_decrease.desc": "Divider effect. Reduces max health.",
   "effect.aquamirae.strong_armor": "Strong Armor",
   "effect.aquamirae.strong_armor.description": "Blinding Abyss armor effect. Increases armor value.",
+  "effect.aquamirae.strong_armor.desc": "Blinding Abyss armor effect. Increases armor value.",
   "effect.aquamirae.swim_speed": "Speed",
   "effect.aquamirae.swim_speed.description": "Terrible armor effect. Increases underwater movement speed.",
+  "effect.aquamirae.swim_speed.desc": "Terrible armor effect. Increases underwater movement speed.",
 
   "death.attack.crystallization": "%1$s has been turned into a crystal",
 
@@ -214,12 +216,8 @@
   "info.captain_spawn_fail": "§c Nothing happened...",
   "info.maze_mother_spawn": "§c You feel the vibrations under the ice...",
 
-  "perk.rune_of_the_storm.name": "@§7Rune of the Storm",
-  "perk.rune_of_the_storm.style": "rune_of_the_storm",
-  "perk.rune_of_the_storm.text": "Rune of the Storm>Deals 33% more damage>in cold biomes.",
-
-  "aquamirae.obscure_book.mod_entry": " §7Adventure mod that adds a> §7graveyard of ships with terrible> §7deep sea creatures.> §8The exploration of this mod> §8starts by finding an Ice Maze> §8located somewhere in the Deep> §8Frozen Ocean biome. ",
-  "aquamirae.obscure_book.mod_link": "ob-aquamirae",
+  "perk.aquamirae.rune_of_the_storm": "@§7Rune of the Storm",
+  "perk.aquamirae.rune_of_the_storm.desc": "Rune of the Storm > Deals 33% more damage in cold biomes.",
 
   "subtitles.ambient.ship_horn": "",
   "subtitles.block.frozen_chest.unlock": "Frosen chest unlocked",
