--- a/src/main/resources/assets/aquamirae/lang/ru_ru.json
+++ b/src/main/resources/assets/aquamirae/lang/ru_ru.json
@@ -1,4 +1,6 @@
 {
+  "language.aquamirae.translation_author": "",
+
   "advancements.aquamirae.root.descr": "Кладбище кораблей",
   "advancements.aquamirae.root.title": "Aquamirae",
   "advancements.aquamirae.find_ice_maze.descr": "Найдите Ледяной лабиринт в биоме Глубокого замороженного океана",
@@ -30,49 +32,46 @@
   "advancements.aquamirae.catch_golden_moth.descr": "Поймайте сияющего мотылька в бутылку",
   "advancements.aquamirae.catch_golden_moth.title": "Сияй!",
 
-  "obscure_book.aquamirae.description": " Adventure mod that adds a> Ship Graveyard with terrible> deep sea creatures.> The exploration of this mod> starts by finding an Ice Maze> located in the Deep Frozen> Ocean biome.",
-
   "class.aquamirae.sea_wolf": "Морской Волк",
   "class.aquamirae.sea_wolf_armor": "Броня Морского Волка",
   "class.aquamirae.sea_wolf_weapon": "Оружие Морского Волка",
 
-  "ability.abyssal_armor_full_1": "Эффект комплекта §8с Топхельмом>Получая фатальный урон, ваша>смерть откладывается на #1с§7.>Вы наносите на 80% меньше>урона пока эффект активен.",
-  "ability.abyssal_armor_full_2": "Эффект комплекта §8с Тиарой>Ослепляет ближайших враждебных>существ, уменьшая их скорость>передвижения на 50%.",
-  "ability.abyssal_armor_half": "Эффект полусета>§9+25% Броня>§9+4 Твёрдость брони",
-  "ability.cost.none": "",
-  "ability.dagger_of_greed_1": "Кража>Атакованные Жители и>Злыдни теряют изумруды.",
-  "ability.dagger_of_greed_2": "Кара>Шанс получить Дурное Знамение>при атаке мирных Жителей.",
-  "ability.dagger_of_greed_3": "§dУникальная ковка>§5Создан Древним Кузнецом и>§5не может быть починен.",
-  "ability.divider": "Пронизывание>Уменьшает максимальное>здоровье цели на 5%>на #1с§7. Складывается>до 10 раз.",
-  "ability.fin_cutter": "Отмщение>За каждое ваше пустое>сердце наносит на #1%>больше урона (максимум #2%§7).",
-  "ability.maze_rose": "Активная способность>Призывает чакрам на #2с§7,>наносящий #1 §7урона вблизи.",
-  "ability.poisoned_blade": "Заражение>Атакованные существа>получают Отравление>на #1с§7.",
-  "ability.poisoned_chakra": "Активная способность>Призывает отравленный>чакрам на #2с§7, наносящий>#1 §7урона вблизи. ",
-  "ability.remnants_saber": "Адаптация>Наносит на #1% §7урона>больше под водой.",
-  "ability.terrible_armor_full": "Эффект комплекта>Aтакующие вас враги>получат Отравление на #1с§7.",
-  "ability.terrible_armor_half": "Эффект полусета>Получение урона в воде>увеличит вашу скорость>плавания на #1% §7на #2с§7.",
-  "ability.terrible_sword": "Кровожадное Око>Вы получаете #1 §7урона,>если удар не убивает>противника.",
-  "ability.three_bolt_armor_full": "Эффект комплекта>Защищает вас от холода>в водах Ледяного Лабиринта.",
-  "ability.three_bolt_armor_half": "Эффект полусета>Работает только со шлемом и>костюмом: костюм обеспечивает>вас кислородом под водой.",
-  "ability.whisper_of_the_abyss": "Перфорация>Снижает броню цели>на 10% на #1с§7.>Суммируется до 5 раз.",
-  "ability.coral_lance": "Усмирение>Вы наносите на #1%§7>больше урона существам>с Кладбища Кораблей.",
+  "ability.aquamirae.abyssal_armor_full_1": "Эффект комплекта §8с Топхельмом > Получая фатальный урон, ваша смерть откладывается на {#1}. Вы наносите на 80% меньше урона пока эффект активен.",
+  "ability.aquamirae.abyssal_armor_full_2": "Эффект комплекта §8с Тиарой > Ослепляет ближайших враждебных существ, уменьшая их скорость передвижения на 50%.",
+  "ability.aquamirae.abyssal_armor_half": "Эффект полусета > +25% Броня > +4 Твёрдость брони",
+  "ability.aquamirae.dagger_of_greed_1": "Кража > Атакованные Жители и Злыдни теряют изумруды.",
+  "ability.aquamirae.dagger_of_greed_2": "Кара > Шанс получить Дурное Знамение при атаке мирных Жителей.",
+  "ability.aquamirae.dagger_of_greed_3": "Уникальная ковка > Создан Древним Кузнецом и не может быть починен.",
+  "ability.aquamirae.divider": "Пронизывание > Уменьшает максимальное здоровье цели на 5% на {#1}. Складывается до 10 раз.",
+  "ability.aquamirae.fin_cutter": "Отмщение > За каждое ваше пустое сердце наносит на {#1} больше урона (максимум {#2}).",
+  "ability.aquamirae.maze_rose": "Активная способность > Призывает чакрам на {#2}, наносящий {#1} урона вблизи.",
+  "ability.aquamirae.poisoned_blade": "Заражение > Атакованные существа получают Отравление на {#1}.",
+  "ability.aquamirae.poisoned_chakra": "Активная способность > Призывает отравленный чакрам на {#2}, наносящий {#1} урона вблизи. ",
+  "ability.aquamirae.remnants_saber": "Адаптация > Наносит на {#1} урона больше под водой.",
+  "ability.aquamirae.terrible_armor_full": "Эффект комплекта > Aтакующие вас враги получат Отравление на {#1}.",
+  "ability.aquamirae.terrible_armor_half": "Эффект полусета > Получение урона в воде увеличит вашу скорость плавания на {#1} на {#2}.",
+  "ability.aquamirae.terrible_sword": "Кровожадное Око > Вы получите {#1} урона, если удар не убивает противника.",
+  "ability.aquamirae.three_bolt_armor_full": "Эффект комплекта > Защищает вас от холода в водах Ледяного Лабиринта.",
+  "ability.aquamirae.three_bolt_armor_half": "Эффект полусета > Работает только со шлемом и костюмом: костюм обеспечивает вас кислородом под водой.",
+  "ability.aquamirae.whisper_of_the_abyss": "Перфорация > Снижает броню цели на 10% на {#1}. Суммируется до 5 раз.",
+  "ability.aquamirae.coral_lance": "Усмирение > Вы наносите на {#1} больше урона существам с Кладбища Кораблей.",
 
-  "tooltip.lore.frozen_key": "Открывает сундук, спрятанный>в глубинах Ледяного Лабиринта.",
-  "tooltip.lore.golden_moth_in_a_jar": "Некоторые сокровища могут>иметь собственную душу, а>не только пожирать чужие...",
-  "tooltip.lore.luminescent_bubble": "Увеличивает скорость плавания>ближайших игроков. Размещайте>на плаву для прокладывания>подводных путей.",
-  "tooltip.lore.luminescent_lamp": "Подводный источник света.",
-  "tooltip.lore.material": "Материал",
-  "tooltip.lore.pirate_pouch": "[i]Нажмите [u] чтобы открыть.>Забытые пиратские обноски,>пахнущие тухлыми устрицами...",
-  "tooltip.lore.poseidons_breakfast": "Еда морских богов.>§9Неистовость X (3:00)>§9Спешка V (3:00)> >§5При применении:>§9+100% Сила способностей>§9+50% Сокращение перезарядки",
-  "tooltip.lore.rune_of_the_storm": "[i]Нажмите [u] чтобы использовать.>Прикрепляется к мечу в вашей>левой руке, увеличивая его урон>в холодных биомах на 33%.",
-  "tooltip.lore.dead_sea_scroll": "[i]Нажмите [u] чтобы прочесть.>§dНеизвестный эффект",
-  "tooltip.lore.sea_casserole": "Оно смотрит на меня?>§9Спешка II (1:30)>§9Сила (0:30)> >§5При применении:>§9+20% Сокращение перезарядки>§9+3 Урон",
-  "tooltip.lore.sea_stew": "Сила моря в твоём желудке!>§9Неистовость III (2:00)>§9Сила (2:00)> >§5При применении:>§9+30% Сила способностей>§9+3 Урон",
-  "tooltip.lore.shell_horn": "[b]§dПризывает Капитана Корнелию.>Можно использовать около>воды в Ледяном Лабиринте.",
-  "tooltip.lore.ship_graveyard_echo": "Если внимательно прислушаться,>можно услышать горны сотен>кораблей, потерянных в Ледяном>Лабиринте...",
-  "tooltip.lore.treasure_pouch": "[i]Нажмите [u] чтобы открыть.>Некогда ценное сокровище,>сейчас лишь мусор под>слоем льда.",
-  "tooltip.lore.wisteria_niveis": "Даже посреди ледяной>пустоши может появиться>прекрастная жизнь.",
-  "tooltip.lore.oxygelium": "Может быть размещён.",
+  "lore.aquamirae.frozen_key": "Открывает сундук, спрятанный в глубинах Ледяного Лабиринта.",
+  "lore.aquamirae.golden_moth_in_a_jar": "Некоторые сокровища могут иметь собственную душу, а не только пожирать чужие...",
+  "lore.aquamirae.luminescent_bubble": "Увеличивает скорость плавания ближайших игроков. Размещайте на плаву для прокладывания подводных путей.",
+  "lore.aquamirae.luminescent_lamp": "Подводный источник света.",
+  "lore.aquamirae.material": "Материал",
+  "lore.aquamirae.pirate_pouch": "{I}Нажмите {U} чтобы открыть. > Забытые пиратские обноски, пахнущие тухлыми устрицами...",
+  "lore.aquamirae.poseidons_breakfast": "Еда морских богов. > §9Неистовость X (3:00) > §9Спешка V (3:00) > > §5При применении: > §9+100% Сила способностей > §9+50% Сокращение перезарядки",
+  "lore.aquamirae.rune_of_the_storm": "{I}Нажмите {U} чтобы использовать. > Прикрепляется к мечу в вашей > левой руке, увеличивая его урон > в холодных биомах на 33%.",
+  "lore.aquamirae.dead_sea_scroll": "{I}Нажмите {U} чтобы прочесть. > §dНеизвестный эффект",
+  "lore.aquamirae.sea_casserole": "Оно смотрит на меня? > §9Спешка II (1:30) > §9Сила (0:30) > > §5При применении: > §9+20% Сокращение перезарядки > §9+3 Урон",
+  "lore.aquamirae.sea_stew": "Сила моря в твоём желудке! > §9Неистовость III (2:00) > §9Сила (2:00) > > §5При применении: > §9+30% Сила способностей > §9+3 Урон",
+  "lore.aquamirae.shell_horn": "{B}§dПризывает Капитана Корнелию. > Можно использовать около воды в Ледяном Лабиринте.",
+  "lore.aquamirae.ship_graveyard_echo": "Если внимательно прислушаться, можно услышать горны сотен кораблей, потерянных в Ледяном Лабиринте...",
+  "lore.aquamirae.treasure_pouch": "{I}Нажмите {U} чтобы открыть. > Некогда ценное сокровище, сейчас лишь мусор под слоем льда.",
+  "lore.aquamirae.wisteria_niveis": "Даже посреди ледяной пустоши может появиться прекрастная жизнь.",
+  "lore.aquamirae.oxygelium": "Может быть размещён.",
 
   "itemGroup.aquamirae": "Aquamirae",
   "item.aquamirae.abyssal_amethyst": "Аметист бездны",
@@ -169,10 +168,7 @@
   "block.aquamirae.golden_moth_in_a_jar": "Золотой мотылёк в банке",
   "block.aquamirae.luminescent_bubble": "Люминесцентный пузырь",
   "block.aquamirae.luminescent_lamp": "Люминесцентная лампа",
-  "block.aquamirae.oxygelium_bud": "Бутон Кислородника",
-  "block.aquamirae.oxygelium_bud_empty": "Пустой бутон Кислородника",
-  "block.aquamirae.oxygelium_bud_rare": "Редкий бутон Кислородника",
-  "block.aquamirae.oxygelium_stem": "Стебель Кислородника",
+  "block.aquamirae.oxygelium": "Кислородник",
   "block.aquamirae.painting_anglerfish": "Коллекционная картина",
   "block.aquamirae.painting_anglerfish_desc": "Anglerfish by Obscuria",
   "block.aquamirae.painting_aurora": "Коллекционная картина",
@@ -197,16 +193,22 @@
 
   "effect.aquamirae.abyss_blindness": "Ослепление",
   "effect.aquamirae.abyss_blindness.description": "Эффект брони Ослепляющей бездны. Уменьшает скорость передвижения.",
+  "effect.aquamirae.abyss_blindness.desc": "Эффект брони Ослепляющей бездны. Уменьшает скорость передвижения.",
   "effect.aquamirae.armor_decrease": "§cПерфорация",
   "effect.aquamirae.armor_decrease.description": "Эффект Шёпота бездны. Уменьшает показатель брони.",
+  "effect.aquamirae.armor_decrease.desc": "Эффект Шёпота бездны. Уменьшает показатель брони.",
   "effect.aquamirae.crystallization": "§cКристаллизация",
   "effect.aquamirae.crystallization.description": "Эффект брони Ослепляющей бездны. Вы наносите на 80% меньше урона и умираете по окончанию эффекта.",
+  "effect.aquamirae.crystallization.desc": "Эффект брони Ослепляющей бездны. Вы наносите на 80% меньше урона и умираете по окончанию эффекта.",
   "effect.aquamirae.health_decrease": "§cРассечение",
   "effect.aquamirae.health_decrease.description": "Эффект Рассекателя. Уменьшает максимальное здоровье.",
+  "effect.aquamirae.health_decrease.desc": "Эффект Рассекателя. Уменьшает максимальное здоровье.",
   "effect.aquamirae.strong_armor": "§9Крепкая броня",
   "effect.aquamirae.strong_armor.description": "Эффект брони Ослепляющей бездны. Увеличивает показатель брони.",
+  "effect.aquamirae.strong_armor.desc": "Эффект брони Ослепляющей бездны. Увеличивает показатель брони.",
   "effect.aquamirae.swim_speed": "§9Скорость",
   "effect.aquamirae.swim_speed.description": "Эффект Ужасной брони. Увеличивает скорость передвижения под водой.",
+  "effect.aquamirae.swim_speed.desc": "Эффект Ужасной брони. Увеличивает скорость передвижения под водой.",
 
   "death.attack.crystallization": "%1$s был обращён в кристалл",
 
@@ -214,12 +216,8 @@
   "info.captain_spawn_fail": " §cНо никто не пришел...",
   "info.maze_mother_spawn": "§c Вы чувствуете вибрацию подо льдом...",
 
-  "perk.rune_of_the_storm.name": "@§7Руна Шторма",
-  "perk.rune_of_the_storm.style": "rune_of_the_storm",
-  "perk.rune_of_the_storm.text": "Руна Шторма>Наносит на 33% больше>урона в холодных биомах.",
-
-  "aquamirae.obscure_book.mod_entry": " §7Приключенческий мод, добавляющий> §7кладбище кораблей с ужасными> §7глубоководными существами.> §8Исследование этого мода> §8начинается с нахождения Ледяного> §8Лабиринта, расположенного где-то> §8в Глубоком Ледяном Океане. ",
-  "aquamirae.obscure_book.mod_link": "ob-aquamirae",
+  "perk.aquamirae.rune_of_the_storm": "@§7Руна Шторма",
+  "perk.aquamirae.rune_of_the_storm.desc": "Руна Шторма > Наносит на 33% больше урона в холодных биомах.",
 
   "subtitles.ambient.ship_horn": "",
   "subtitles.block.frozen_chest.unlock": "Замороженный замок открыт",
