--- a/src/main/resources/assets/aquamirae/lang/en_us.json
+++ b/src/main/resources/assets/aquamirae/lang/en_us.json
@@ -164,6 +164,10 @@
   "set.aquamirae.twilight_grotto_leggings": "Leggings of the Twilight Grotto",
   "set.aquamirae.twilight_grotto_pants": "Pants of the Twilight Grotto",
 
+  "filled_map.aquamirae.ship": "§fIce Maze Ship Map",
+  "filled_map.aquamirae.outpost": "§fIce Maze Outpost Map",
+  "filled_map.aquamirae.shelter": "§eIce Maze Shelter Map",
+
   "block.aquamirae.elodea": "Elodea",
   "block.aquamirae.frozen_chest": "Frozen Chest",
   "block.aquamirae.golden_moth_in_a_jar": "Golden Moth in a Jar",
