fix(lang): Fixed typo

--- a/src/main/resources/assets/aquamirae/lang/en_us.json
+++ b/src/main/resources/assets/aquamirae/lang/en_us.json
@@ -224,7 +224,7 @@
   "perk.aquamirae.rune_of_the_storm.desc": "Rune of the Storm > Deals 33% more damage in cold biomes.",
 
   "subtitles.ambient.ship_horn": "",
-  "subtitles.block.frozen_chest.unlock": "Frosen chest unlocked",
+  "subtitles.block.frozen_chest.unlock": "Frozen chest unlocked",
   "subtitles.effect.mystery": "",
   "subtitles.effect.oxygen": "Oxygen decompressed",
   "subtitles.entity.captain_cornelia.ambient": "",
